一个阶段：可批量挂，隐藏房间

--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "target_app_id": 570,
     "custom_game_id": "3586896069",
     "server_region": 14,
-    "lobby_password": "123",
+    "lobby_password": "wuxianjineng",
     "max_players_per_room": 4,
     "seeding_mode": true,
     "debug_mode": true,
