批量第一个版本完结 下一个版本增加网页操作

--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
-﻿{
+{
   "name": "dota2-arcade-bot-v6-0",
   "version": "6.0.0",
   "dependencies": {
-    "steam-user": "^4.28.0",
-    "steam-totp": "^2.1.2",
+    "https-proxy-agent": "^7.0.6",
+    "protobufjs": "^7.2.5",
     "proxy-agent": "^6.3.0",
-    "protobufjs": "^7.2.5"
+    "socks-proxy-agent": "^8.0.5",
+    "steam-totp": "^2.1.2",
+    "steam-user": "^4.28.0"
   }
 }
