--- a/config/config copy.json
+++ b/config/config copy.json
@@ -14,8 +14,8 @@
     {
       "id": "fleet_1",
       "leader": [
-        {"username": "xiaoyanxiansheng1","password": "Wg13127877713"},
-        {"username": "xiaoyanxiansheng4","password": "WG13127877713"}
+        {"username": "XXX","password": "XXX"},
+        {"username": "XXX","password": "XXX"}
       ],
       "followers": [
         {"username": "hkinzkccm679426","password": "8m4Xf4xShad3"},
