新增查询房间信息

--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
   "global_settings": {
     "target_app_id": 570,
-    "custom_game_id": "3588570271",
+    "custom_game_id": "3586896069",
     "server_region": 14,
-    "lobby_password": "",
+    "lobby_password": "wuxian",
     "max_players_per_room": 24,
     "seeding_mode": true,
     "debug_mode": true,
