--- a/config/config.json
+++ b/config/config.json
@@ -3,11 +3,12 @@
     "target_app_id": 570,
     "custom_game_id": "3586896069",
     "server_region": 14,
-    "lobby_password": "wuxian",
-    "max_players_per_room": 24,
+    "server_regions": [1, 2, 5, 7, 14, 19],
+    "lobby_password": "",
+    "max_players_per_room": 23,
     "seeding_mode": true,
     "debug_mode": true,
-    "debug_max_bots_per_room": 23,
+    "debug_max_bots_per_room": 22,
     "accounts_per_proxy": 6,
     "shared_steam_data_path": "../shared_steam_data"
   },
