--- a/config/config_leaders - 副本.json
+++ b/config/config_leaders - 副本.json
@@ -22,6 +22,51 @@
       "username": "xiaoyanxiansheng1",
       "password": "Wg13127877713",
       "shared_secret": "vt3l9pGy3y93cYBogmq/zJaVe3s="
+    },
+    {
+      "username": "makgy56277",
+      "password": "hqwwl77966",
+      "shared_secret": ""
+    },
+    {
+      "username": "hkrlw24709",
+      "password": "wtzwv18168",
+      "shared_secret": ""
+    },
+    {
+      "username": "nbqhp32665",
+      "password": "suyll09914",
+      "shared_secret": ""
+    },
+    {
+      "username": "flnho77037",
+      "password": "xwngi34176",
+      "shared_secret": ""
+    },
+    {
+      "username": "nikif94890",
+      "password": "fyvfn43849",
+      "shared_secret": ""
+    },
+    {
+      "username": "zmblb19407",
+      "password": "jcgnt79358",
+      "shared_secret": ""
+    },
+    {
+      "username": "eqyrl15154",
+      "password": "ibrnk50770",
+      "shared_secret": ""
+    },
+    {
+      "username": "kddhx26569",
+      "password": "vzber18216",
+      "shared_secret": ""
+    },
+    {
+      "username": "pjevy30270",
+      "password": "wpxnw33739",
+      "shared_secret": ""
     }
   ],
   "proxies": [
