--- a/config/config_leaders1.json
+++ b/config/config_leaders1.json
@@ -21,8 +21,12 @@
   },
   "leaders": [
     {
-      "username": "wojiaoshiyi",
-      "password": "456YP456YP"
+      "username": "zht231844292",
+      "password": "GfUGLleJCZ22"
+    },
+    {
+      "username": "sncr_1029",
+      "password": "mleqwq59"
     }
   ],
   "proxies": [
