--- a/config/config_showcase1.json
+++ b/config/config_showcase1.json
@@ -18,13 +18,13 @@
   },
   "showcase_leaders": [
     {
-      "username": "xiaoyanxiansheng1",
-      "password": "Wg13127877713",
+      "username": "CriticalStrikeStudio",
+      "password": "MarCsStudio2023",
       "proxy": "http://lrkksoef:47592sgxxc1k@188.68.1.154:6023"
     },
     {
-      "username": "nazgul8933",
-      "password": "Nazgul147258369",
+      "username": "a02821145",
+      "password": "Wuxianqiyuan2025",
       "proxy": "http://lrkksoef:47592sgxxc1k@188.68.1.154:6023"
     }
   ],
